--- a/project_landing_page.html
+++ b/project_landing_page.html
@@ -1,9 +1,9 @@
-<!-- Howker Ridge Projects Landing Page (proposed) -->
+<!-- Howker Ridge Projects Landing Page -->
 <div class="howker-landing">
   <header>
-    <h1>Howker Ridge Projects</h1>
+    <h1>Howker Ridge Projects</h1>
     <p class="lede">
-      An unofficial, volunteer‑run hub for everything Howker Ridge in the Northern Presidential Range (Randolph, NH).  Explore trail maps, live conditions, natural history and APIs for developers.  Always verify information with official sources and practice safe hiking.
+      An unofficial, volunteer-run hub for everything Howker Ridge in the Northern Presidential Range (Randolph, NH). Explore trail maps, live conditions, natural history, and APIs for developers. Always verify information with official sources and practice safe hiking.
     </p>
   </header>
 
@@ -13,10 +13,10 @@
     <article class="card">
       <img class="logo" src="https://static.wixstatic.com/media/66b1b2_28672dbcb1514038b7656139137c4a05~mv2.png" alt="Trail map logo">
       <h2>Interactive Trail Map</h2>
-      <p class="meta">POIs • Issue logging • Base‑map styles</p>
-      <p>Mobile‑ready Leaflet map covering the entire Howker Ridge line.  Fly to curated points of interest, switch among dark/light/topo layers and report blowdowns or erosion.  Built by volunteers for quick field checks and post‑hike documentation.</p>
+      <p class="meta">POIs • Issue logging • Base-map styles</p>
+      <p>Mobile-ready Leaflet map covering the entire Howker Ridge line. Fly to curated points of interest, switch among dark/light/topo layers, and report blowdowns or erosion. Built by volunteers for quick field checks and post-hike documentation.</p>
       <div class="spacer"></div>
-      <a class="btn" href="/howker-ridge-interactive-map">Open Map</a>
+      <a class="btn" href="/howker-ridge-interactive-map">Open Map</a>
     </article>
 
     <!-- Live Conditions card -->
@@ -24,7 +24,7 @@
       <img class="logo" src="https://static.wixstatic.com/media/66b1b2_9d069d65e7fc43059106f805a45de873~mv2.png" alt="Conditions logo">
       <h2>Live Conditions</h2>
       <p class="meta">Forecasts • Snow depth • Freezing level</p>
-      <p>Aggregated National Weather Service forecasts, alerts, snow‑depth estimates and freezing‑level trends, plus links to WMNF notices.  Check current weather and snowpack before you go—this tool is unofficial and maintained by volunteers.</p>
+      <p>Aggregated National Weather Service forecasts, alerts, snow-depth estimates, and freezing-level trends, plus links to WMNF notices. Check current weather and snowpack before you go—this tool is unofficial and maintained by volunteers.</p>
       <div class="spacer"></div>
       <a class="btn" href="/howker-ridge-conditions">View Conditions</a>
     </article>
@@ -32,9 +32,9 @@
     <!-- Plant Catalog card -->
     <article class="card">
       <img class="logo" src="https://static.wixstatic.com/media/66b1b2_ae699f4f2e4f4f28b7734c32b8cbfedc~mv2.png" alt="Plant catalog logo">
-      <h2>Alpine & Subalpine Plant Catalog</h2>
+      <h2>Alpine & Subalpine Plant Catalog</h2>
       <p class="meta">Field photos • Common & Latin names</p>
-      <p>Browse high‑elevation flora from Howker Ridge and nearby summits—including bilberry, Labrador tea, mountain ash and more.  Each entry provides photos, identification tips and habitat context for the Presidential Range.</p>
+      <p>Browse high-elevation flora from Howker Ridge and nearby summits—including bilberry, Labrador tea, mountain ash, and more. Each entry provides photos, identification tips, and habitat context for the Presidential Range.</p>
       <div class="spacer"></div>
       <a class="btn" href="/howker-plant-catalog">Browse Catalog</a>
     </article>
@@ -42,50 +42,50 @@
     <!-- Trail Info card -->
     <article class="card">
       <img class="logo" src="/assets/howker-info-icon.png" alt="Trail info logo">
-      <h2>Trail Overview & Info</h2>
+      <h2>Trail Overview & Info</h2>
       <p class="meta">Route description • Facilities • Safety</p>
-      <p>Learn about the strenuous, scenic Howker Ridge Trail leading to Mount Madison—operational hours, trailhead coordinates, directions, amenities and cautions.  Based on official WMNF sources:contentReference[oaicite:18]{index=18}:contentReference[oaicite:19]{index=19}; always consult up‑to‑date maps and regulations before hiking.</p>
+      <p>Learn about the strenuous, scenic Howker Ridge Trail leading to Mount Madison—operational hours, trailhead coordinates, directions, amenities, and cautions. Based on official White Mountain National Forest information; always consult up-to-date maps and regulations before hiking.</p>
       <div class="spacer"></div>
       <a class="btn" href="/howker-ridge-info">Trail Details</a>
     </article>
   </section>
 
-  <!-- API tools section -->
+  <!-- API-powered webapps -->
   <section class="grid">
-    <!-- NH48 API App -->
+    <!-- NH48 API App -->
     <article class="card">
       <img class="logo" src="/assets/nh48-api-icon.png" alt="NH48 API app logo">
-      <h2>NH48 API App</h2>
-      <p class="meta">Peak database • Photos • Filters</p>
-      <p>Explore New Hampshire’s 48 four‑thousand‑footers with a searchable catalog.  Powered by the NH48 API, it displays each peak’s elevation, prominence, difficulty, route lists and photo metadata:contentReference[oaicite:20]{index=20}.  Ideal for planning hikes or developing your own tools.</p>
+      <h2>NH48 API Web App</h2>
+      <p class="meta">Peak catalog • Detail pages • Photos</p>
+      <p>Explore New Hampshire’s 48 four-thousand-footers with a searchable catalog UI and per-peak detail pages. The app reads directly from the NH48 API to display each peak’s elevation, prominence, range, difficulty, standard routes, and rich photo metadata—perfect for trip-planning or as a live demo of the API.</p>
       <div class="spacer"></div>
-      <a class="btn" href="/nh48-api-app">Open App</a>
+      <a class="btn" href="/nh48-api-app">Open NH48 App</a>
     </article>
 
     <!-- WMNF Trails API App -->
     <article class="card">
       <img class="logo" src="/assets/wmnf-api-icon.png" alt="WMNF Trails API app logo">
-      <h2>WMNF Trails API App</h2>
-      <p class="meta">Trail explorer • Progress tracker • 3‑D hike</p>
-      <p>Browse White Mountain trails with a searchable list and interactive map.  Mark trails as completed, record dates, hide completed trails, export/import progress and launch an immersive 3‑D “Virtual Hike” over Cesium:contentReference[oaicite:21]{index=21}:contentReference[oaicite:22]{index=22}.  Not for navigation—verify with official sources.</p>
+      <h2>WMNF Trails API Web App</h2>
+      <p class="meta">Trail explorer • Progress tracker • 3-D hike</p>
+      <p>Browse White Mountain trails with a searchable list and interactive map powered by the WMNF Trails API. Mark trails as completed, record dates, hide completed routes, export or import your progress, and launch an immersive 3-D “Virtual Hike” over the trail in Cesium. Not for navigation—always verify against official maps and guidebooks.</p>
       <div class="spacer"></div>
-      <a class="btn" href="/wmnf-trails-api-app">Open App</a>
+      <a class="btn" href="/wmnf-trails-api-app">Open Trails App</a>
     </article>
   </section>
 
   <!-- API repository links -->
   <section class="panel">
     <h2>Developer APIs</h2>
-    <p>Open‑source datasets and code for hikers, developers and conservationists.</p>
+    <p>Open-source datasets and code for hikers, developers, educators, and conservationists.</p>
     <div class="api-links">
       <div class="api-card">
-        <h3>NH48 API</h3>
-        <p>Comprehensive data & media system for the 48 four‑thousand‑foot peaks:contentReference[oaicite:23]{index=23}.  Includes structured peak attributes, trail & route metadata and EXIF‑driven photo manifests.  Static JSON served via GitHub Pages and jsDelivr:contentReference[oaicite:24]{index=24}.</p>
+        <h3>NH48 API</h3>
+        <p>A structured data and media system for all 48 New Hampshire four-thousand-foot peaks. Includes peak attributes, trail and route metadata, and EXIF-driven photo manifests. Distributed as static JSON and images via GitHub Pages and jsDelivr for easy reuse in apps and maps.</p>
         <a class="github-btn" href="https://github.com/natesobol/nh48-api" target="_blank" rel="noopener">View on GitHub</a>
       </div>
       <div class="api-card">
-        <h3>WMNF Trails API</h3>
-        <p>GeoJSON trail dataset and front‑end apps for the White Mountain National Forest.  Includes a Trail Explorer with search/sort, completion tracking and import/export tools, plus a Cesium‑powered Virtual Hike viewer:contentReference[oaicite:25]{index=25}:contentReference[oaicite:26]{index=26}.</p>
+        <h3>WMNF Trails API</h3>
+        <p>A GeoJSON trail dataset and front-end tools for the White Mountain National Forest. Includes a Trail Explorer with search/sort controls, completion tracking with date fields and CSV/XLSX import/export, plus a Cesium-powered Virtual Hike viewer for individual trails.</p>
         <a class="github-btn" href="https://github.com/natesobol/WMNF-Trails-API" target="_blank" rel="noopener">View on GitHub</a>
       </div>
     </div>
@@ -94,49 +94,147 @@
   <!-- About / Credits -->
   <section class="panel">
     <div class="kicker">About</div>
-    <p>These pages are part of the **NH48pics** volunteer effort.  Accuracy matters, but always verify with official sources and practise safe hiking.</p>
+    <p>These pages are part of the NH48pics volunteer effort. Accuracy matters, but always verify with official sources and practise safe hiking.</p>
     <ul class="list">
-      <li><strong>Region:</strong> White Mountain National Forest • Presidential Range • Randolph, NH</li>
-      <li><strong>Trail coverage:</strong> Howker Ridge Trail (Randolph Path junction to Osgood Ridge) and adjacent features</li>
-      <li><strong>Data sources:</strong> NWS, OpenStreetMap, OpenTopoMap, Esri, WMNF public notices, NH48 API, WMNF Trails API and field observations</li>
-      <li><strong>Community:</strong> Local volunteers contribute photos, trail notes and field checks</li>
+      <li><strong>Region:</strong> White Mountain National Forest • Presidential Range • Randolph, NH</li>
+      <li><strong>Trail coverage:</strong> Howker Ridge Trail (Randolph Path junction to Osgood Ridge) and adjacent features</li>
+      <li><strong>Data sources:</strong> NWS, OpenStreetMap, OpenTopoMap, Esri, WMNF public notices, NH48 API, WMNF Trails API, and field observations</li>
+      <li><strong>Community:</strong> Local volunteers contribute photos, trail notes, and field checks</li>
       <li><strong>Contact:</strong> <a href="/contact">nh48pics.com/contact</a></li>
     </ul>
   </section>
 
-  <footer>© Nathan Sobol • Author</footer>
+  <footer>© Nathan Sobol • Author</footer>
 </div>
 
 <style>
-  .howker-landing { font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; color: #e9eef5; }
+  .howker-landing {
+    font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+    color: #e9eef5;
+  }
   header { text-align: center; margin-bottom: 20px; }
   h1 { font-size: 2rem; margin: 0; }
-  .lede { max-width: 820px; margin: 10px auto 0; color: #a5b4c3; }
+  .lede {
+    max-width: 820px;
+    margin: 10px auto 0;
+    color: #a5b4c3;
+  }
 
-  .grid { display: grid; gap: 16px; }
-  @media (min-width: 900px) { .grid { grid-template-columns: repeat(auto-fit, minmax(260px, 1fr)); } }
+  .grid {
+    display: grid;
+    gap: 16px;
+  }
+  /* consistent spacing between grid blocks */
+  .grid + .grid {
+    margin-top: 20px;
+  }
+  @media (min-width: 900px) {
+    .grid {
+      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+    }
+  }
 
-  .card { background: #0f1627; border: 2px solid #fff; border-radius: 10px; padding: 16px; display: flex; flex-direction: column; align-items: flex-start; }
+  .card {
+    background: #0f1627;
+    border: 2px solid #fff;
+    border-radius: 10px;
+    padding: 16px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
   .card h2 { margin: 8px 0 0; font-size: 1.2rem; }
-  .card .meta { font-size: .9rem; color: #a5b4c3; margin-bottom: 6px; }
+  .card .meta {
+    font-size: .9rem;
+    color: #a5b4c3;
+    margin-bottom: 6px;
+  }
   .card p { margin: 0; line-height: 1.45; }
   .card .spacer { flex-grow: 1; }
   .card .btn { margin-top: auto; }
 
-  .logo { width: 48px; height: 48px; margin-bottom: 8px; border-radius: 8px; border: 1px solid #fff; background: #0a0f18; object-fit: contain; }
+  .logo {
+    width: 48px;
+    height: 48px;
+    margin-bottom: 8px;
+    border-radius: 8px;
+    border: 1px solid #fff;
+    background: #0a0f18;
+    object-fit: contain;
+  }
 
-  .btn, .github-btn { display: inline-block; background: #fff; color: #111; border: 2px solid #fff; border-radius: 10px; padding: 8px 12px; font-weight: 600; text-decoration: none; align-self: flex-start; }
-  .btn:hover, .github-btn:hover { filter: brightness(.9); }
+  .btn,
+  .github-btn {
+    display: inline-block;
+    background: #fff;
+    color: #111;
+    border: 2px solid #fff;
+    border-radius: 10px;
+    padding: 8px 12px;
+    font-weight: 600;
+    text-decoration: none;
+    align-self: flex-start;
+  }
+  .btn:hover,
+  .github-btn:hover {
+    filter: brightness(.9);
+  }
 
-  .panel { background: #0f1627; border: 2px solid #fff; border-radius: 10px; padding: 16px; margin-top: 20px; }
-  .kicker { font-size: .8rem; text-transform: uppercase; letter-spacing: .1em; color: #a5b4c3; margin-bottom: 6px; }
-  .list { margin: 8px 0 0; padding-left: 18px; color: #a5b4c3; }
+  .panel {
+    background: #0f1627;
+    border: 2px solid #fff;
+    border-radius: 10px;
+    padding: 16px;
+    margin-top: 20px;
+  }
+  .kicker {
+    font-size: .8rem;
+    text-transform: uppercase;
+    letter-spacing: .1em;
+    color: #a5b4c3;
+    margin-bottom: 6px;
+  }
+  .list {
+    margin: 8px 0 0;
+    padding-left: 18px;
+    color: #a5b4c3;
+  }
 
-  .api-links { display: flex; flex-direction: column; gap: 16px; }
-  @media (min-width: 700px) { .api-links { flex-direction: row; } }
-  .api-card { flex: 1; background: #0f1627; border: 2px solid #fff; border-radius: 10px; padding: 16px; display: flex; flex-direction: column; gap: 8px; }
-  .api-card h3 { margin: 0; font-size: 1.1rem; }
-  .api-card p { margin: 0 0 8px; font-size: .9rem; color: #a5b4c3; line-height: 1.4; }
+  .api-links {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+  }
+  @media (min-width: 700px) {
+    .api-links {
+      flex-direction: row;
+    }
+  }
+  .api-card {
+    flex: 1;
+    background: #0f1627;
+    border: 2px solid #fff;
+    border-radius: 10px;
+    padding: 16px;
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+  }
+  .api-card h3 {
+    margin: 0;
+    font-size: 1.1rem;
+  }
+  .api-card p {
+    margin: 0 0 8px;
+    font-size: .9rem;
+    color: #a5b4c3;
+    line-height: 1.4;
+  }
 
-  footer { text-align: right; margin-top: 20px; font-size: .9rem; color: #a5b4c3; }
+  footer {
+    text-align: right;
+    margin-top: 20px;
+    font-size: .9rem;
+    color: #a5b4c3;
+  }
 </style>
