--- a/project_landing_page.html
+++ b/project_landing_page.html
@@ -1,4 +1,146 @@
-<!-- Howker Ridge Projects Landing Page -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Howker Ridge Projects</title>
+  <style>
+    /* Base resets and layout tweaks */
+    * { box-sizing: border-box; }
+    html, body { margin: 0; padding: 0; overflow-x: hidden; }
+    .howker-landing {
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+      color: #e9eef5;
+      padding: 0 16px;
+    }
+    header { text-align: center; margin-bottom: 20px; }
+    h1 { font-size: 2rem; margin: 0; }
+    .lede {
+      max-width: 820px;
+      margin: 10px auto 0;
+      color: #a5b4c3;
+    }
+    /* Grid sections */
+    .grid {
+      display: grid;
+      gap: 16px;
+    }
+    /* Space between successive grids */
+    .grid + .grid {
+      margin-top: 20px;
+    }
+    @media (min-width: 900px) {
+      .grid {
+        grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+      }
+    }
+    /* Card styles */
+    .card {
+      background: #0f1627;
+      border: 2px solid #ffffff;
+      border-radius: 10px;
+      padding: 16px;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      height: 100%;
+    }
+    .card h2 { margin: 8px 0 0; font-size: 1.2rem; }
+    .card .meta {
+      font-size: 0.9rem;
+      color: #a5b4c3;
+      margin-bottom: 6px;
+    }
+    .card p { margin: 0; line-height: 1.45; }
+    .card .spacer { flex-grow: 1; }
+    .card .btn { margin-top: auto; }
+    /* Logos for each card */
+    .logo {
+      width: 48px;
+      height: 48px;
+      margin-bottom: 8px;
+      border-radius: 8px;
+      border: 1px solid #ffffff;
+      background: #0a0f18;
+      object-fit: contain;
+    }
+    /* Buttons */
+    .btn,
+    .github-btn {
+      display: inline-block;
+      background: #ffffff;
+      color: #111111;
+      border: 2px solid #ffffff;
+      border-radius: 10px;
+      padding: 8px 12px;
+      font-weight: 600;
+      text-decoration: none;
+      align-self: flex-start;
+    }
+    .btn:hover,
+    .github-btn:hover {
+      filter: brightness(0.9);
+    }
+    /* Panels */
+    .panel {
+      background: #0f1627;
+      border: 2px solid #ffffff;
+      border-radius: 10px;
+      padding: 16px;
+      margin-top: 20px;
+    }
+    .kicker {
+      font-size: 0.8rem;
+      text-transform: uppercase;
+      letter-spacing: 0.1em;
+      color: #a5b4c3;
+      margin-bottom: 6px;
+    }
+    .list {
+      margin: 8px 0 0;
+      padding-left: 18px;
+      color: #a5b4c3;
+    }
+    /* API links container */
+    .api-links {
+      display: flex;
+      flex-direction: column;
+      gap: 16px;
+    }
+    @media (min-width: 700px) {
+      .api-links {
+        flex-direction: row;
+      }
+    }
+    .api-card {
+      flex: 1;
+      background: #0f1627;
+      border: 2px solid #ffffff;
+      border-radius: 10px;
+      padding: 16px;
+      display: flex;
+      flex-direction: column;
+      gap: 8px;
+    }
+    .api-card h3 {
+      margin: 0;
+      font-size: 1.1rem;
+    }
+    .api-card p {
+      margin: 0 0 8px;
+      font-size: 0.9rem;
+      color: #a5b4c3;
+      line-height: 1.4;
+    }
+    footer {
+      text-align: right;
+      margin-top: 20px;
+      font-size: 0.9rem;
+      color: #a5b4c3;
+    }
+  </style>
+</head>
+<body>
 <div class="howker-landing">
   <header>
     <h1>Howker Ridge Projects</h1>
@@ -32,8 +174,8 @@
     <!-- Plant Catalog card -->
     <article class="card">
       <img class="logo" src="https://static.wixstatic.com/media/66b1b2_ae699f4f2e4f4f28b7734c32b8cbfedc~mv2.png" alt="Plant catalog logo">
-      <h2>Alpine & Subalpine Plant Catalog</h2>
-      <p class="meta">Field photos • Common & Latin names</p>
+      <h2>Alpine &amp; Subalpine Plant Catalog</h2>
+      <p class="meta">Field photos • Common &amp; Latin names</p>
       <p>Browse high-elevation flora from Howker Ridge and nearby summits—including bilberry, Labrador tea, mountain ash, and more. Each entry provides photos, identification tips, and habitat context for the Presidential Range.</p>
       <div class="spacer"></div>
       <a class="btn" href="/howker-plant-catalog">Browse Catalog</a>
@@ -41,8 +183,9 @@
 
     <!-- Trail Info card -->
     <article class="card">
-      <img class="logo" src="/assets/howker-info-icon.png" alt="Trail info logo">
-      <h2>Trail Overview & Info</h2>
+      <!-- Use the new trail overview logo from the repo -->
+      <img class="logo" src="Trail overview logo.png" alt="Trail info logo">
+      <h2>Trail Overview &amp; Info</h2>
       <p class="meta">Route description • Facilities • Safety</p>
       <p>Learn about the strenuous, scenic Howker Ridge Trail leading to Mount Madison—operational hours, trailhead coordinates, directions, amenities, and cautions. Based on official White Mountain National Forest information; always consult up-to-date maps and regulations before hiking.</p>
       <div class="spacer"></div>
@@ -54,7 +197,8 @@
   <section class="grid">
     <!-- NH48 API App -->
     <article class="card">
-      <img class="logo" src="/assets/nh48-api-icon.png" alt="NH48 API app logo">
+      <!-- Use the new NH48 API logo from the repo -->
+      <img class="logo" src="nh48API_logo.png" alt="NH48 API app logo">
       <h2>NH48 API Web App</h2>
       <p class="meta">Peak catalog • Detail pages • Photos</p>
       <p>Explore New Hampshire’s 48 four-thousand-footers with a searchable catalog UI and per-peak detail pages. The app reads directly from the NH48 API to display each peak’s elevation, prominence, range, difficulty, standard routes, and rich photo metadata—perfect for trip-planning or as a live demo of the API.</p>
@@ -64,7 +208,8 @@
 
     <!-- WMNF Trails API App -->
     <article class="card">
-      <img class="logo" src="/assets/wmnf-api-icon.png" alt="WMNF Trails API app logo">
+      <!-- Use the new WMNF Trails API logo from the repo -->
+      <img class="logo" src="WMNF_Trails_API_logo.png" alt="WMNF Trails API app logo">
       <h2>WMNF Trails API Web App</h2>
       <p class="meta">Trail explorer • Progress tracker • 3-D hike</p>
       <p>Browse White Mountain trails with a searchable list and interactive map powered by the WMNF Trails API. Mark trails as completed, record dates, hide completed routes, export or import your progress, and launch an immersive 3-D “Virtual Hike” over the trail in Cesium. Not for navigation—always verify against official maps and guidebooks.</p>
@@ -106,135 +251,5 @@
 
   <footer>© Nathan Sobol • Author</footer>
 </div>
-
-<style>
-  .howker-landing {
-    font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
-    color: #e9eef5;
-  }
-  header { text-align: center; margin-bottom: 20px; }
-  h1 { font-size: 2rem; margin: 0; }
-  .lede {
-    max-width: 820px;
-    margin: 10px auto 0;
-    color: #a5b4c3;
-  }
-
-  .grid {
-    display: grid;
-    gap: 16px;
-  }
-  /* consistent spacing between grid blocks */
-  .grid + .grid {
-    margin-top: 20px;
-  }
-  @media (min-width: 900px) {
-    .grid {
-      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-    }
-  }
-
-  .card {
-    background: #0f1627;
-    border: 2px solid #fff;
-    border-radius: 10px;
-    padding: 16px;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-  }
-  .card h2 { margin: 8px 0 0; font-size: 1.2rem; }
-  .card .meta {
-    font-size: .9rem;
-    color: #a5b4c3;
-    margin-bottom: 6px;
-  }
-  .card p { margin: 0; line-height: 1.45; }
-  .card .spacer { flex-grow: 1; }
-  .card .btn { margin-top: auto; }
-
-  .logo {
-    width: 48px;
-    height: 48px;
-    margin-bottom: 8px;
-    border-radius: 8px;
-    border: 1px solid #fff;
-    background: #0a0f18;
-    object-fit: contain;
-  }
-
-  .btn,
-  .github-btn {
-    display: inline-block;
-    background: #fff;
-    color: #111;
-    border: 2px solid #fff;
-    border-radius: 10px;
-    padding: 8px 12px;
-    font-weight: 600;
-    text-decoration: none;
-    align-self: flex-start;
-  }
-  .btn:hover,
-  .github-btn:hover {
-    filter: brightness(.9);
-  }
-
-  .panel {
-    background: #0f1627;
-    border: 2px solid #fff;
-    border-radius: 10px;
-    padding: 16px;
-    margin-top: 20px;
-  }
-  .kicker {
-    font-size: .8rem;
-    text-transform: uppercase;
-    letter-spacing: .1em;
-    color: #a5b4c3;
-    margin-bottom: 6px;
-  }
-  .list {
-    margin: 8px 0 0;
-    padding-left: 18px;
-    color: #a5b4c3;
-  }
-
-  .api-links {
-    display: flex;
-    flex-direction: column;
-    gap: 16px;
-  }
-  @media (min-width: 700px) {
-    .api-links {
-      flex-direction: row;
-    }
-  }
-  .api-card {
-    flex: 1;
-    background: #0f1627;
-    border: 2px solid #fff;
-    border-radius: 10px;
-    padding: 16px;
-    display: flex;
-    flex-direction: column;
-    gap: 8px;
-  }
-  .api-card h3 {
-    margin: 0;
-    font-size: 1.1rem;
-  }
-  .api-card p {
-    margin: 0 0 8px;
-    font-size: .9rem;
-    color: #a5b4c3;
-    line-height: 1.4;
-  }
-
-  footer {
-    text-align: right;
-    margin-top: 20px;
-    font-size: .9rem;
-    color: #a5b4c3;
-  }
-</style>
+</body>
+</html>
